data/derived/fa15/progs/unify/prog1249.ml.out
Characters 41-62:
  if (n > 0) then digitsOfInt(n mod 10)::[n mod 10] 
                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
